@@ -60,9 +60,10 @@ void testmemory(void)
   ASSERT(destination[3] == source[2]);
 
   /* Test memchr() */
+  memcpy(destination, source, 4);
   ASSERT(NULL == memchr(destination, 5, 4));
-  /*ASSERT(destination == memchr(destination, 0, 4));
-  ASSERT(destination + 3 == memchr(destination, 3, 4));*/
+  ASSERT(destination == memchr(destination, 0, 4));
+  ASSERT(destination + 3 == memchr(destination, 3, 4));
 
   ASSERT(strlen("test") == 4);
   ASSERT(strlen("t") == 1);
